added a new theme hacker.css

--- a/algorithms/javascript/two-sum.html
+++ b/algorithms/javascript/two-sum.html
@@ -13,7 +13,8 @@
                 for(var j=1; j < nums.length; j++) {  
 
                     if(i === j) continue;
-                    
+                    // document.writeln("i == " + i);
+                    // document.writeln("j == " + j);
                     if(nums[i] + nums[j] == target) {
                         return [i,j];
                     }
